# IMU_exercises

./: .gitmodules  CMakeLists.txt  README.md  kayak_paddle_position.pde
MPU9250_MS5637_t3/: CMakeLists.txt  Components.cpp  Components.h  Constants.h  Loop.cpp  Loop.h  Quaternion.cpp  Quaternion.h  Setup.cpp  WireReader.cpp  WireReader.h
MPU9250_MS5637_t3/atmega328/: CMakeLists.txt
MPU9250_MS5637_t3/esp8266_12e/: CMakeLists.txt
MPU9250_MS5637_t3/teensy/: CMakeLists.txt
MPU9250_MS5637_t3/ut/: CMakeLists.txt  TestMadgwickQuaternionUpdate.cpp
MPU9250_lulu/: CMakeLists.txt  Mpu9250_lulu.cpp
MPU9250_lulu/targets/atmega328/: CMakeLists.txt
accelerometer_tilt/: CMakeLists.txt  accelerometer_tilt.cpp
accelerometer_tilt/targets/wroom32/: CMakeLists.txt
hello/: CMakeLists.txt  Loop.cpp  Setup.cpp
hello/atmega328/: CMakeLists.txt
kayak_paddle_position/: kayak_paddle_position.pde
mpu6050_dmp6/: CMakeLists.txt  mpu6050_dmp6.cpp
mpu6050_dmp6/targets/esp8266/12e/: CMakeLists.txt
mpu6050_dmp6/targets/esp8266/generic/: CMakeLists.txt
sparkfun/: CMakeLists.txt  sparkfun.cpp
sparkfun/targets/12e/: CMakeLists.txt
sparkfun/targets/atmega328/: CMakeLists.txt
sparkfun_dmp/: CMakeLists.txt  sparkfun_dmp.cpp
sparkfun_dmp/targets/12e/: CMakeLists.txt
sparkfun_dmp/targets/esp8266/12e/: CMakeLists.txt
sparkfun_dmp/targets/esp8266/generic/: CMakeLists.txt
sparkfun_dmp/targets/wroom32/: CMakeLists.txt
